--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
+      - PORT=5000                # ✅ Fix: Explicit backend port
     depends_on:
       - redis
     networks:
