--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,11 @@
-version: '3'
 services:
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
-    networks:
-      - app-network
-
   backend:
     build: ./Backend
     ports:
       - "5000:5000"
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-      - PORT=5000                # ✅ Fix: Explicit backend port
-    depends_on:
-      - redis
+      - REDIS_URL=redis://default:OmhyWFpbMeJEFBIkCHdNSMbcQAFijtFX@mainline.proxy.rlwy.net:38368
+      - PORT=5000
     networks:
       - app-network
 
@@ -24,10 +13,7 @@ services:
     build: ./Backend
     command: ["node", "workers/emailWorker.js"]
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    depends_on:
-      - redis
+      - REDIS_URL=redis://default:OmhyWFpbMeJEFBIkCHdNSMbcQAFijtFX@mainline.proxy.rlwy.net:38368
     networks:
       - app-network
 
@@ -35,10 +21,7 @@ services:
     build: ./Backend
     command: ["node", "workers/emailWorker.js"]
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    depends_on:
-      - redis
+      - REDIS_URL=redis://default:OmhyWFpbMeJEFBIkCHdNSMbcQAFijtFX@mainline.proxy.rlwy.net:38368
     networks:
       - app-network
 
@@ -46,10 +29,7 @@ services:
     build: ./Backend
     command: ["node", "workers/emailWorker.js"]
     environment:
-      - REDIS_HOST=redis
-      - REDIS_PORT=6379
-    depends_on:
-      - redis
+      - REDIS_URL=redis://default:OmhyWFpbMeJEFBIkCHdNSMbcQAFijtFX@mainline.proxy.rlwy.net:38368
     networks:
       - app-network
 
