--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -8,5 +8,6 @@ COPY . .
 RUN npm install
 
 RUN apk add --no-cache ca-certificates
+RUN apt-get update && apt-get install -y ca-certificates
 
 CMD ["node", "server.js"]
