--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -5,9 +5,11 @@ WORKDIR /app
 
 COPY . .
 
+RUN apt-get update && apt-get install -y ca-certificates
+
 RUN npm install
 
-RUN apk add --no-cache ca-certificates
-RUN apt-get update && apt-get install -y ca-certificates
+# Optional cleanup to reduce image size
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 CMD ["node", "server.js"]
