--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   backend:
     build: ./Backend
@@ -54,3 +56,4 @@ services:
 
 networks:
   app-network:
+    driver: bridge
