--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,64 +3,34 @@ version: "3.9"
 services:
   backend:
     build: ./Backend
-    command: ["node", "server.js"]
     ports:
       - "5000:5000"
-    environment:
-      - REDIS_URL=${REDIS_URL}
-      - REDIS_TLS=${REDIS_TLS}
-      - PORT=5000
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
-      - REDIRECT_URI=${REDIRECT_URI}
-      - DATABASE_URL=${DATABASE_URL}
-      - FRONTEND_URL=${FRONTEND_URL}
-      - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+    env_file:
+      - ./Backend/.env
     networks:
       - app-network
 
   worker1:
     build: ./Backend
     command: ["node", "workers/emailWorker.js"]
-    environment:
-      - REDIS_URL=${REDIS_URL}
-      - REDIS_TLS=${REDIS_TLS}
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
-      - REDIRECT_URI=${REDIRECT_URI}
-      - DATABASE_URL=${DATABASE_URL}
-      - FRONTEND_URL=${FRONTEND_URL}
-      - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+    env_file:
+      - ./Backend/.env
     networks:
       - app-network
 
   worker2:
     build: ./Backend
     command: ["node", "workers/emailWorker.js"]
-    environment:
-      - REDIS_URL=${REDIS_URL}
-      - REDIS_TLS=${REDIS_TLS}
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
-      - REDIRECT_URI=${REDIRECT_URI}
-      - DATABASE_URL=${DATABASE_URL}
-      - FRONTEND_URL=${FRONTEND_URL}
-      - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+    env_file:
+      - ./Backend/.env
     networks:
       - app-network
 
   worker3:
     build: ./Backend
     command: ["node", "workers/emailWorker.js"]
-    environment:
-      - REDIS_URL=${REDIS_URL}
-      - REDIS_TLS=${REDIS_TLS}
-      - CLIENT_ID=${CLIENT_ID}
-      - CLIENT_SECRET=${CLIENT_SECRET}
-      - REDIRECT_URI=${REDIRECT_URI}
-      - DATABASE_URL=${DATABASE_URL}
-      - FRONTEND_URL=${FRONTEND_URL}
-      - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+    env_file:
+      - ./Backend/.env
     networks:
       - app-network
 
@@ -68,8 +38,8 @@ services:
     build: ./my-app
     ports:
       - "3000:3000"
-    environment:
-      - NEXT_PUBLIC_API_BASE_URL=${NEXT_PUBLIC_API_BASE_URL}
+    env_file:
+      - ./my-app/.env.local
     networks:
       - app-network
 
