--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ./my-app/.env.local
+      - ./my-app/.env
     networks:
       - app-network
 
